# akropolisOS-chain-node

./: .env  .gitignore  404.html  Cargo.toml  README.md  build.rs  index.html  src.29fa1025.js  src.5718c481.js  src.67708235.js  src.71e210a8.js  src.7716e0b6.js  src.8ff9286e.js  src.9466fb0c.js  src.c1586080.js  src.cce0feeb.js  src.e350ee57.js  src.e7609722.js  src.fdfc52ab.js
.github/workflows/: pr.yml
assets/: manifest.json  manifest.webapp
bridge/dai-home/: package-lock.json  truffle-config.js
bridge/dai-home/contracts/logics/: DAIBridge.sol
bridge/dai-home/contracts/main/: DAIBridge.sol
bridge/dai-home/migrations/: 2_deploy_bridge.js
bridge/dai-home/test/: BeneficiaryOperations.js
bridge/dai-home/test/impl/: BeneficiaryOperationsImpl.sol
bridge/ethereum-substrate-bridge/: Cargo.toml
bridge/ethereum-substrate-bridge/src/: main.rs
bridge/frontend/: .eslintignore  .eslintrc.js  .gitignore  codegen.yml  package-lock.json  package.json  tsconfig.json
bridge/frontend/@types/: extendWindow.d.ts  global.d.ts
bridge/frontend/@types/_helpers/: index.d.ts
bridge/frontend/src/: env.ts  index.html  index.tsx
bridge/frontend/src/api/: index.ts
bridge/frontend/src/api/callPolkaApi/: fromResponse.ts  index.ts  toRequest.ts  types.ts
bridge/frontend/src/app/: App.tsx  routes.ts
bridge/frontend/src/app/pages/: index.ts
bridge/frontend/src/components/: Address.tsx  Balance.tsx  BalanceValue.tsx  ErrorBoundary.tsx  EthereumValidators.tsx  Loading.tsx  index.ts
bridge/frontend/src/components/Address/: index.tsx
bridge/frontend/src/components/App/: index.tsx
bridge/frontend/src/components/Balance/: index.tsx
bridge/frontend/src/components/EthereumToSubstrate/: SendingForm.tsx  index.tsx
bridge/frontend/src/components/EthereumValidators/: index.tsx
bridge/frontend/src/components/Header/: Header.style.ts  Header.tsx
bridge/frontend/src/components/Hint/: Hint.style.ts  Hint.tsx
bridge/frontend/src/components/ModalButton/: ModalButton.style.ts  ModalButton.tsx
bridge/frontend/src/components/Pagination/: Pagination.style.ts  Pagination.tsx
bridge/frontend/src/components/ShortAddress/: ShortAddress.style.ts  ShortAddress.tsx
bridge/frontend/src/components/SubstrateToEthereum/: SendingForm.tsx  index.tsx
bridge/frontend/src/components/Table/: Table.style.ts  Table.tsx
bridge/frontend/src/components/TransactionStatus/: TransactionStatus.tsx
bridge/frontend/src/components/TransfersList/: TransfersList.tsx  TransfersTableCells.tsx
bridge/frontend/src/components/VotingCard/: VotingCard.style.tsx  VotingCard.tsx
bridge/frontend/src/components/context/: api.ts
bridge/frontend/src/components/form/: Checkbox.tsx  DecimalsField.tsx  Input.tsx  Radio.tsx  Select.tsx  SpyField.tsx  TextField.tsx  TextInputField.tsx  index.ts
bridge/frontend/src/components/icons/: index.ts
bridge/frontend/src/components/inputs/: DecimalsInput.tsx
bridge/frontend/src/core/: Root.tsx  getEnv.ts
bridge/frontend/src/features/limits/: index.ts
bridge/frontend/src/features/settings/: index.ts
bridge/frontend/src/features/tokenTransfer/: index.ts
bridge/frontend/src/features/transfersHistory/: index.ts
bridge/frontend/src/subgraphQueries/: CurrentMessagesByIds.bridge.graphql  LastValidatorsListMessage.bridge.graphql  LimitProposal.bridge.graphql  LimitProposals.bridge.graphql  Limits.bridge.graphql
bridge/frontend/src/util/: formatDai.ts  getContractData$.ts  getErrorMsg.ts  toBaseUnit.ts
bridge/frontend/webpack/: common.ts
bridge/validator/: .env.example  Cargo.toml
bridge/validator/res/: EthContract.abi
bridge/validator/src/: extrinsics.rs  main.rs  raw_transaction.rs
cli/: Cargo.toml  build.rs
cli/res/: akropolisos.json  akropolisos_syracuse.json
cli/src/: browser.rs  chain_spec.rs  cli.rs  command.rs  factory_impl.rs  lib.rs  service.rs
executor/: Cargo.toml
executor/benches/: bench.rs
executor/src/: lib.rs
executor/tests/: basic.rs  common.rs  fees.rs  submit_transaction.rs
inspect/: Cargo.toml
inspect/src/: cli.rs  command.rs  lib.rs
js/: main-300836037d50f153893c.bundle.js  main-404ef89e444cf402bde8.bundle.js  main-502183731215872bce6d.bundle.js  main-7eb5e5a189abcd32778f.bundle.js  main-8ab9c552305c6be5d2b5.bundle.js  main-a56e27b5107d0b30500c.bundle.js  main-a8facab1c82f14b9ca4e.bundle.js  main-cababbd2b28929328296.bundle.js  main-cfe4aa9b03f6c5f32f6c.bundle.js  main-ef97f839667a953e97ce.bundle.js  main-f8c04d8455a63a349223.bundle.js  main-fc73e4b64f3adc7e058f.bundle.js  runtime-300836037d50f153893c.bundle.js  runtime-404ef89e444cf402bde8.bundle.js  runtime-502183731215872bce6d.bundle.js  runtime-7eb5e5a189abcd32778f.bundle.js  runtime-8ab9c552305c6be5d2b5.bundle.js  runtime-a56e27b5107d0b30500c.bundle.js  runtime-a8facab1c82f14b9ca4e.bundle.js  runtime-cababbd2b28929328296.bundle.js  runtime-cfe4aa9b03f6c5f32f6c.bundle.js  runtime-ef97f839667a953e97ce.bundle.js  runtime-f8c04d8455a63a349223.bundle.js  runtime-fc73e4b64f3adc7e058f.bundle.js  vendors~main-300836037d50f153893c.bundle.js  vendors~main-404ef89e444cf402bde8.bundle.js  vendors~main-a8facab1c82f14b9ca4e.bundle.js  vendors~main-f8c04d8455a63a349223.bundle.js  vendors~main-fc73e4b64f3adc7e058f.bundle.js
node/: Cargo.toml
node/res/: akropolisos.json  akropolisos_syracuse.json
node/src/: chain_spec.rs  command.rs  service.rs
res/: akropolis.json  akropolis_syracuse.json
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: bridge.rs  constants.rs  dao.rs  impls.rs  lib.rs  marketplace.rs  new_traits_and_types.rs  oracle.rs  price_fetch.rs  price_oracle.rs  token.rs  types.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
scripts/: allan.sh  boba.sh  build.sh  clear.sh  generate_spec.sh  init.sh  populate.sh  raw.sh
src/: chain_spec.rs  cli.rs  command.rs  main.rs  service.rs
testing/: Cargo.toml
testing/benches/: import.rs
testing/src/: bench.rs  client.rs  genesis.rs  keyring.rs  lib.rs
transaction-factory/: Cargo.toml
transaction-factory/src/: lib.rs
(+88 files in other folders)
