[package]
authors = ['Akropolis <admin@akropolis.io>']
build = 'build.rs'
edition = '2018'
name = 'akropolisos-node'
version = '0.3.1'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.3.1'
hex-literal = '0.1'
log = '0.4.8'
parity-codec = '3.2'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'
js-sys = '0.3.35'
chrono = '0.4.7'
structopt = { version = "0.3.8", optional = true }

[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3.0.4'
chrono = '0.4.10'

[dependencies.akropolisos-runtime]
path = 'runtime'
version = '0.4.0'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
version = '2.0.0-alpha.3'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.futures01]
package = 'futures'
version = '0.1.29'

[dependencies.benchmarking]
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-benchmarking-cli'
version = '2.0.0-alpha.3'
optional = true

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
version = '0.8.0-alpha.3'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
version = '2.0.0-alpha.3'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.3'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.3'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.3'


[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.3'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.3'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.3'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.3'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.3'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.3'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.3'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.3'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.3'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.3'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.3'

[dependencies.telemetry]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-telemetry'

[workspace]
members = ['runtime']

[[bin]]
name = 'akropolisos-node'
path = 'src/main.rs'

