[package]
authors = ['Akropolis <admin@akropolis.io>']
edition = '2018'
name = 'akropolisos-node'
version = '0.3.4'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.3.1'
hex-literal = "0.2.1"
log = '0.4.8'
parity-codec = '3.2'
parking_lot = '0.9.0'
tokio = '0.1.22'
jsonrpc-core = "14.0.3"
trie-root = '0.15.2'
js-sys = '0.3.35'
chrono = '0.4.7'
#dotenv = "0.15.0"
structopt = { version = "0.3.8", optional = true }
serde = { version = "1.0.102", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false }
node-cli = { path = "./cli", features = ["cli"] }
akropolisos-runtime = { path = 'runtime' }

[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3.0.4'
chrono = '0.4.10'

[dependencies.benchmarking]
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-benchmarking-cli'
version = '2.0.0-alpha.6'
optional = true

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
version = '2.0.0-alpha.6'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-finality-tracker]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-keyring]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
version = '0.8.0-alpha.6'

[dependencies.sc-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-client-db]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-client-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sc-offchain]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-chain-spec]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
version = '0.8.0-alpha.6'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.telemetry]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-telemetry'
version = '2.0.0-alpha.6'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.pallet-im-online]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0-alpha.6'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
version = '2.0.0-alpha.6'

[dependencies.node-transaction-factory]
git = 'https://github.com/paritytech/substrate.git'
version = "0.8.0-alpha.6"

[workspace]
members = ['runtime', 'cli', 'rpc', 'executor']
