[package]
authors = ['Akropolis <admin@akropolis.io>']
build = 'build.rs'
edition = '2018'
name = 'akropolisos-node'
version = '1.0.1'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'substrate-basic-authorship'

[dependencies.consensus]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'substrate-consensus-aura'

[dependencies.grandpa]
git = "https://github.com/akropolisio/substrate.git"
package = "substrate-finality-grandpa"
branch = 'v1.0_custom'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'substrate-inherents'

[dependencies.network]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'substrate-network'

[dependencies.akropolisos-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'substrate-primitives'

[dependencies.sr-io]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'

[dependencies.substrate-cli]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'

[dependencies.substrate-client]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'

[dependencies.substrate-executor]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'

[dependencies.substrate-service]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'

[dependencies.transaction-pool]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'substrate-transaction-pool'

[dependencies.telemetry]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'substrate-telemetry'

[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[[bin]]
name = 'akropolisos-node'
path = 'src/main.rs'
