[package]
name = "node-inspect"
version = "0.3.1"
authors = ['Akropolis <admin@akropolis.io>']
edition = "2018"
license = "MIT"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.2.0" }
derive_more = "0.99"
log = "0.4.8"
sc-cli = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sc-client-api = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sc-service = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-blockchain = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sp-core = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { rev =  '710722f02f372601b2dae178d66654b8cb372ab5', git = 'https://github.com/paritytech/substrate.git' }
structopt = "0.3.8"
